footer: fix some alignemts

--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -12,7 +12,7 @@
   --secondary-color: @pink;
 }
 
-.copyright {
+.columnLeft {
   grid-column: 2;
 
   @media (max-width: @breakPointM) {
@@ -20,26 +20,21 @@
   }
 }
 
-.nav {
+.columnRight {
   grid-column: 3;
   text-align: right;
 
   @media (max-width: @breakPointM) {
-    grid-column: 3;
+    grid-column: 2;
     grid-column-end: span 2;
     text-align: left;
   }
-
-  @media (max-width: @breakPointS) {
-    grid-column: 2;
-    grid-column-end: span 2;
-  }
 }
 
-.navList {
+.nav {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: -.5rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
@@ -52,10 +47,7 @@
 .navItem {
   margin: 0;
   display: inline;
-
-  &:not(:last-child) {
-    margin-right: 1rem;
-  }
+  margin: .5rem;
 
   @media (max-width: @breakPointS) {
     display: block;
